[metadata]
name = csp-scan
version = 1.0.0
author = Marcin Szleszynski
author_email = mszlesz@gmail.com
description = Constructs strict Content-Security-Policy header after scanning all HTML files in a directory
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/martinezpl/csp-scan
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.0

[options.entry_points]
console_scripts =
    csp-scan = csp_scan.__main__:main